Remove project and work page

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@ sitemap:
   <h1 class="blog-title">{{ site.title }}</h1>
   <h2 class="blog-description">{{ site.description }}</h2>
   <div class="custom-links">
-    <a href="/about/">About</a>
+    <a href="/">Blog</a>
     &nbsp;&nbsp;·&nbsp;&nbsp;
-    <a href="/projects/">Projects</a>
+    <a href="/about">About</a>
+    &nbsp;&nbsp;·&nbsp;&nbsp;
+    <a href="https://github.com/tomasbasham?tab=repositories">Projects</a>
   </div>
 </header>
 
