Progress made to standardise the markup, styling and scripting

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ sitemap:
     <span>Articles</span>
   </h5>
 
-  <div class="cf frame">
+  <div class="clearfix frame">
     {% for post in paginator.posts %}
     {% include post.html %}
     {% endfor %}
