Update GitHub link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ sitemap:
     &nbsp;&nbsp;·&nbsp;&nbsp;
     <a href="/about">About</a>
     &nbsp;&nbsp;·&nbsp;&nbsp;
-    <a href="https://github.com/tomasbasham?tab=repositories">Projects</a>
+    <a href="https://github.com/tomasbasham?tab=repositories&type=source">Projects</a>
   </div>
 </header>
 
