Update SEO across the site

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ sitemap:
   {% endif %}
 
   <h1 class="blog-title">{{ site.title }}</h1>
-  <h2 class="blog-description">{{ site.description }}</h2>
+  <h2 class="blog-description">A Personal Technology Jekyll Blog and Portfolio</h2>
   <div class="custom-links">
     <a href="/">Blog</a>
     &nbsp;&nbsp;·&nbsp;&nbsp;
@@ -26,7 +26,7 @@ sitemap:
   </div>
 </header>
 
-<main class="content" role="main">
+<main class="content">
   {% if site.tags.featured %}
   <h5 class="index-headline featured">
     <span>Featured</span>
